package edu.hitsz.factory;

import edu.hitsz.aircraft.EnemyAircraft;

public interface AircraftFactory {
    EnemyAircraft createAircraft();
}
